--- a/us-weather-history.cabal
+++ b/us-weather-history.cabal
@@ -1,4 +1,4 @@
-cabal-version: 2.4
+cabal-version: 2.2
 name:
   us-weather-history
 version:
@@ -29,7 +29,7 @@ extra-doc-files:
     README.md
   , CHANGELOG.md
 tested-with:
-  GHC == 8.6.3
+  GHC == 8.6.5
 
 library
   hs-source-dirs:
@@ -37,7 +37,9 @@ library
   exposed-modules:
     UsWeatherHistory
   build-depends:
-    , base ^>= 4.12.0.0
+    , base >= 4.11 && < 4.14
+    , colonnade >= 1.2 && < 1.3
+    , siphon >= 0.8 &&
   ghc-options:
     -Wall
     -O2
